parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> LCURLYBRACKET function RCURLYBRACKET
Rule 2     function -> code
Rule 3     function -> code function
Rule 4     function -> conditional
Rule 5     function -> conditional function
Rule 6     conditional -> WHILE LPAREN operation RPAREN block
Rule 7     conditional -> IF LPAREN operation RPAREN block
Rule 8     conditional -> IF LPAREN operation RPAREN block ELSE block
Rule 9     conditional -> IF RPAREN operation LPAREN block ELSE block
Rule 10    code -> statements
Rule 11    code -> statements code
Rule 12    code -> blocks
Rule 13    code -> blocks code
Rule 14    blocks -> block blocks
Rule 15    blocks -> block
Rule 16    block -> LCURLYBRACKET function RCURLYBRACKET
Rule 17    block -> LCURLYBRACKET statements RCURLYBRACKET
Rule 18    statements -> statement SEMICOLON statements
Rule 19    statements -> statement SEMICOLON
Rule 20    statement -> operation
Rule 21    statement -> list
Rule 22    statement -> ID ASSIGNVALUE operation
Rule 23    statement -> ID ASSIGNVALUE list
Rule 24    statement -> list_id_string ASSIGNVALUE operation
Rule 25    statement -> PRINT LPAREN operation RPAREN
Rule 26    statement -> PRINT LPAREN list RPAREN
Rule 27    list_id_string -> list LBRACKET expression RBRACKET
Rule 28    list_id_string -> list LBRACKET list_id_string RBRACKET
Rule 29    list_id_string -> list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
Rule 30    list_id_string -> LBRACKET list RBRACKET LBRACKET expression RBRACKET
Rule 31    list_id_string -> LBRACKET expression RBRACKET LBRACKET expression RBRACKET
Rule 32    list_id_string -> LBRACKET list RBRACKET LBRACKET ID RBRACKET
Rule 33    list_id_string -> LBRACKET expression RBRACKET LBRACKET ID RBRACKET
Rule 34    list_id_string -> ID LBRACKET list_id_string RBRACKET
Rule 35    list_id_string -> ID LBRACKET expression RBRACKET
Rule 36    list_id_string -> ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
Rule 37    list_id_string -> STRING LBRACKET list_id_string RBRACKET
Rule 38    list_id_string -> STRING LBRACKET expression RBRACKET
Rule 39    list_id_string -> STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
Rule 40    list -> LBRACKET items RBRACKET
Rule 41    items -> operation COMMA items
Rule 42    items -> operation
Rule 43    items -> list
Rule 44    items -> list COMMA items
Rule 45    operation -> equal
Rule 46    equal -> condition
Rule 47    condition -> expression
Rule 48    term -> factor
Rule 49    expression -> term
Rule 50    equal -> NOT equal
Rule 51    operation -> expression IN list
Rule 52    operation -> operation OR equal
Rule 53    operation -> operation AND equal
Rule 54    expression -> expression PLUS term
Rule 55    expression -> expression MINUS term
Rule 56    term -> term TIMES factor
Rule 57    term -> term DIVIDE factor
Rule 58    term -> term FLOORDIV factor
Rule 59    term -> term MOD factor
Rule 60    term -> term EXPONENTIAL factor
Rule 61    condition -> condition GREATERTHEN expression
Rule 62    condition -> condition GREATERTHENEQUAL expression
Rule 63    condition -> condition LESSTHENEQUAL expression
Rule 64    condition -> condition LESSTHEN expression
Rule 65    equal -> equal IS condition
Rule 66    equal -> equal ISNOT condition
Rule 67    factor -> ID
Rule 68    factor -> NUMBER
Rule 69    factor -> FLOAT
Rule 70    factor -> STRING
Rule 71    factor -> LPAREN operation RPAREN
Rule 72    factor -> list_id_string

Terminals, with rules where they appear

AND                  : 53
ASSIGNVALUE          : 22 23 24
COMMA                : 41 44
DIVIDE               : 57
ELSE                 : 8 9
EXPONENTIAL          : 60
FLOAT                : 69
FLOORDIV             : 58
GREATERTHEN          : 61
GREATERTHENEQUAL     : 62
ID                   : 22 23 32 33 34 35 36 67
IF                   : 7 8 9
IN                   : 51
IS                   : 65
ISNOT                : 66
LBRACKET             : 27 28 29 29 30 30 31 31 32 32 33 33 34 35 36 36 37 38 39 39 40
LCURLYBRACKET        : 1 16 17
LESSTHEN             : 64
LESSTHENEQUAL        : 63
LPAREN               : 6 7 8 9 25 26 71
MINUS                : 55
MOD                  : 59
NOT                  : 50
NUMBER               : 68
OR                   : 52
PLUS                 : 54
PRINT                : 25 26
RBRACKET             : 27 28 29 29 30 30 31 31 32 32 33 33 34 35 36 36 37 38 39 39 40
RCURLYBRACKET        : 1 16 17
RPAREN               : 6 7 8 9 25 26 71
SEMICOLON            : 18 19
STRING               : 37 38 39 70
TIMES                : 56
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

block                : 6 7 8 8 9 9 14 15
blocks               : 12 13 14
code                 : 2 3 11 13
condition            : 46 61 62 63 64 65 66
conditional          : 4 5
equal                : 45 50 52 53 65 66
expression           : 27 29 29 30 31 31 33 35 36 36 38 39 39 47 51 54 55 61 62 63 64
factor               : 48 56 57 58 59 60
function             : 1 3 5 16
items                : 40 41 44
list                 : 21 23 26 27 28 29 30 32 43 44 51
list_id_string       : 24 28 34 37 72
operation            : 6 7 8 9 20 22 24 25 41 42 52 53 71
program              : 0
statement            : 18 19
statements           : 10 11 17 18
term                 : 49 54 55 56 57 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . LCURLYBRACKET function RCURLYBRACKET

    LCURLYBRACKET   shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> LCURLYBRACKET . function RCURLYBRACKET
    (2) function -> . code
    (3) function -> . code function
    (4) function -> . conditional
    (5) function -> . conditional function
    (10) code -> . statements
    (11) code -> . statements code
    (12) code -> . blocks
    (13) code -> . blocks code
    (6) conditional -> . WHILE LPAREN operation RPAREN block
    (7) conditional -> . IF LPAREN operation RPAREN block
    (8) conditional -> . IF LPAREN operation RPAREN block ELSE block
    (9) conditional -> . IF RPAREN operation LPAREN block ELSE block
    (18) statements -> . statement SEMICOLON statements
    (19) statements -> . statement SEMICOLON
    (14) blocks -> . block blocks
    (15) blocks -> . block
    (20) statement -> . operation
    (21) statement -> . list
    (22) statement -> . ID ASSIGNVALUE operation
    (23) statement -> . ID ASSIGNVALUE list
    (24) statement -> . list_id_string ASSIGNVALUE operation
    (25) statement -> . PRINT LPAREN operation RPAREN
    (26) statement -> . PRINT LPAREN list RPAREN
    (16) block -> . LCURLYBRACKET function RCURLYBRACKET
    (17) block -> . LCURLYBRACKET statements RCURLYBRACKET
    (45) operation -> . equal
    (51) operation -> . expression IN list
    (52) operation -> . operation OR equal
    (53) operation -> . operation AND equal
    (40) list -> . LBRACKET items RBRACKET
    (27) list_id_string -> . list LBRACKET expression RBRACKET
    (28) list_id_string -> . list LBRACKET list_id_string RBRACKET
    (29) list_id_string -> . list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (30) list_id_string -> . LBRACKET list RBRACKET LBRACKET expression RBRACKET
    (31) list_id_string -> . LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (32) list_id_string -> . LBRACKET list RBRACKET LBRACKET ID RBRACKET
    (33) list_id_string -> . LBRACKET expression RBRACKET LBRACKET ID RBRACKET
    (34) list_id_string -> . ID LBRACKET list_id_string RBRACKET
    (35) list_id_string -> . ID LBRACKET expression RBRACKET
    (36) list_id_string -> . ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (37) list_id_string -> . STRING LBRACKET list_id_string RBRACKET
    (38) list_id_string -> . STRING LBRACKET expression RBRACKET
    (39) list_id_string -> . STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (46) equal -> . condition
    (50) equal -> . NOT equal
    (65) equal -> . equal IS condition
    (66) equal -> . equal ISNOT condition
    (49) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (47) condition -> . expression
    (61) condition -> . condition GREATERTHEN expression
    (62) condition -> . condition GREATERTHENEQUAL expression
    (63) condition -> . condition LESSTHENEQUAL expression
    (64) condition -> . condition LESSTHEN expression
    (48) term -> . factor
    (56) term -> . term TIMES factor
    (57) term -> . term DIVIDE factor
    (58) term -> . term FLOORDIV factor
    (59) term -> . term MOD factor
    (60) term -> . term EXPONENTIAL factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . FLOAT
    (70) factor -> . STRING
    (71) factor -> . LPAREN operation RPAREN
    (72) factor -> . list_id_string

    WHILE           shift and go to state 9
    IF              shift and go to state 13
    ID              shift and go to state 16
    PRINT           shift and go to state 18
    LCURLYBRACKET   shift and go to state 3
    LBRACKET        shift and go to state 21
    STRING          shift and go to state 22
    NOT             shift and go to state 24
    NUMBER          shift and go to state 27
    FLOAT           shift and go to state 28
    LPAREN          shift and go to state 10

    function                       shift and go to state 4
    code                           shift and go to state 5
    conditional                    shift and go to state 6
    statements                     shift and go to state 7
    blocks                         shift and go to state 8
    operation                      shift and go to state 11
    block                          shift and go to state 12
    statement                      shift and go to state 14
    list                           shift and go to state 15
    list_id_string                 shift and go to state 17
    equal                          shift and go to state 19
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 26

state 3

    (16) block -> LCURLYBRACKET . function RCURLYBRACKET
    (17) block -> LCURLYBRACKET . statements RCURLYBRACKET
    (2) function -> . code
    (3) function -> . code function
    (4) function -> . conditional
    (5) function -> . conditional function
    (18) statements -> . statement SEMICOLON statements
    (19) statements -> . statement SEMICOLON
    (10) code -> . statements
    (11) code -> . statements code
    (12) code -> . blocks
    (13) code -> . blocks code
    (6) conditional -> . WHILE LPAREN operation RPAREN block
    (7) conditional -> . IF LPAREN operation RPAREN block
    (8) conditional -> . IF LPAREN operation RPAREN block ELSE block
    (9) conditional -> . IF RPAREN operation LPAREN block ELSE block
    (20) statement -> . operation
    (21) statement -> . list
    (22) statement -> . ID ASSIGNVALUE operation
    (23) statement -> . ID ASSIGNVALUE list
    (24) statement -> . list_id_string ASSIGNVALUE operation
    (25) statement -> . PRINT LPAREN operation RPAREN
    (26) statement -> . PRINT LPAREN list RPAREN
    (14) blocks -> . block blocks
    (15) blocks -> . block
    (45) operation -> . equal
    (51) operation -> . expression IN list
    (52) operation -> . operation OR equal
    (53) operation -> . operation AND equal
    (40) list -> . LBRACKET items RBRACKET
    (27) list_id_string -> . list LBRACKET expression RBRACKET
    (28) list_id_string -> . list LBRACKET list_id_string RBRACKET
    (29) list_id_string -> . list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (30) list_id_string -> . LBRACKET list RBRACKET LBRACKET expression RBRACKET
    (31) list_id_string -> . LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (32) list_id_string -> . LBRACKET list RBRACKET LBRACKET ID RBRACKET
    (33) list_id_string -> . LBRACKET expression RBRACKET LBRACKET ID RBRACKET
    (34) list_id_string -> . ID LBRACKET list_id_string RBRACKET
    (35) list_id_string -> . ID LBRACKET expression RBRACKET
    (36) list_id_string -> . ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (37) list_id_string -> . STRING LBRACKET list_id_string RBRACKET
    (38) list_id_string -> . STRING LBRACKET expression RBRACKET
    (39) list_id_string -> . STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (16) block -> . LCURLYBRACKET function RCURLYBRACKET
    (17) block -> . LCURLYBRACKET statements RCURLYBRACKET
    (46) equal -> . condition
    (50) equal -> . NOT equal
    (65) equal -> . equal IS condition
    (66) equal -> . equal ISNOT condition
    (49) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (47) condition -> . expression
    (61) condition -> . condition GREATERTHEN expression
    (62) condition -> . condition GREATERTHENEQUAL expression
    (63) condition -> . condition LESSTHENEQUAL expression
    (64) condition -> . condition LESSTHEN expression
    (48) term -> . factor
    (56) term -> . term TIMES factor
    (57) term -> . term DIVIDE factor
    (58) term -> . term FLOORDIV factor
    (59) term -> . term MOD factor
    (60) term -> . term EXPONENTIAL factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . FLOAT
    (70) factor -> . STRING
    (71) factor -> . LPAREN operation RPAREN
    (72) factor -> . list_id_string

    WHILE           shift and go to state 9
    IF              shift and go to state 13
    ID              shift and go to state 16
    PRINT           shift and go to state 18
    LBRACKET        shift and go to state 21
    STRING          shift and go to state 22
    LCURLYBRACKET   shift and go to state 3
    NOT             shift and go to state 24
    NUMBER          shift and go to state 27
    FLOAT           shift and go to state 28
    LPAREN          shift and go to state 10

    function                       shift and go to state 29
    statements                     shift and go to state 30
    code                           shift and go to state 5
    conditional                    shift and go to state 6
    statement                      shift and go to state 14
    blocks                         shift and go to state 8
    operation                      shift and go to state 11
    block                          shift and go to state 12
    list                           shift and go to state 15
    list_id_string                 shift and go to state 17
    equal                          shift and go to state 19
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 26

state 4

    (1) program -> LCURLYBRACKET function . RCURLYBRACKET

    RCURLYBRACKET   shift and go to state 31


state 5

    (2) function -> code .
    (3) function -> code . function
    (2) function -> . code
    (3) function -> . code function
    (4) function -> . conditional
    (5) function -> . conditional function
    (10) code -> . statements
    (11) code -> . statements code
    (12) code -> . blocks
    (13) code -> . blocks code
    (6) conditional -> . WHILE LPAREN operation RPAREN block
    (7) conditional -> . IF LPAREN operation RPAREN block
    (8) conditional -> . IF LPAREN operation RPAREN block ELSE block
    (9) conditional -> . IF RPAREN operation LPAREN block ELSE block
    (18) statements -> . statement SEMICOLON statements
    (19) statements -> . statement SEMICOLON
    (14) blocks -> . block blocks
    (15) blocks -> . block
    (20) statement -> . operation
    (21) statement -> . list
    (22) statement -> . ID ASSIGNVALUE operation
    (23) statement -> . ID ASSIGNVALUE list
    (24) statement -> . list_id_string ASSIGNVALUE operation
    (25) statement -> . PRINT LPAREN operation RPAREN
    (26) statement -> . PRINT LPAREN list RPAREN
    (16) block -> . LCURLYBRACKET function RCURLYBRACKET
    (17) block -> . LCURLYBRACKET statements RCURLYBRACKET
    (45) operation -> . equal
    (51) operation -> . expression IN list
    (52) operation -> . operation OR equal
    (53) operation -> . operation AND equal
    (40) list -> . LBRACKET items RBRACKET
    (27) list_id_string -> . list LBRACKET expression RBRACKET
    (28) list_id_string -> . list LBRACKET list_id_string RBRACKET
    (29) list_id_string -> . list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (30) list_id_string -> . LBRACKET list RBRACKET LBRACKET expression RBRACKET
    (31) list_id_string -> . LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (32) list_id_string -> . LBRACKET list RBRACKET LBRACKET ID RBRACKET
    (33) list_id_string -> . LBRACKET expression RBRACKET LBRACKET ID RBRACKET
    (34) list_id_string -> . ID LBRACKET list_id_string RBRACKET
    (35) list_id_string -> . ID LBRACKET expression RBRACKET
    (36) list_id_string -> . ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (37) list_id_string -> . STRING LBRACKET list_id_string RBRACKET
    (38) list_id_string -> . STRING LBRACKET expression RBRACKET
    (39) list_id_string -> . STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (46) equal -> . condition
    (50) equal -> . NOT equal
    (65) equal -> . equal IS condition
    (66) equal -> . equal ISNOT condition
    (49) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (47) condition -> . expression
    (61) condition -> . condition GREATERTHEN expression
    (62) condition -> . condition GREATERTHENEQUAL expression
    (63) condition -> . condition LESSTHENEQUAL expression
    (64) condition -> . condition LESSTHEN expression
    (48) term -> . factor
    (56) term -> . term TIMES factor
    (57) term -> . term DIVIDE factor
    (58) term -> . term FLOORDIV factor
    (59) term -> . term MOD factor
    (60) term -> . term EXPONENTIAL factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . FLOAT
    (70) factor -> . STRING
    (71) factor -> . LPAREN operation RPAREN
    (72) factor -> . list_id_string

    RCURLYBRACKET   reduce using rule 2 (function -> code .)
    WHILE           shift and go to state 9
    IF              shift and go to state 13
    ID              shift and go to state 16
    PRINT           shift and go to state 18
    LCURLYBRACKET   shift and go to state 3
    LBRACKET        shift and go to state 21
    STRING          shift and go to state 22
    NOT             shift and go to state 24
    NUMBER          shift and go to state 27
    FLOAT           shift and go to state 28
    LPAREN          shift and go to state 10

    code                           shift and go to state 5
    function                       shift and go to state 32
    conditional                    shift and go to state 6
    statements                     shift and go to state 7
    blocks                         shift and go to state 8
    operation                      shift and go to state 11
    block                          shift and go to state 12
    statement                      shift and go to state 14
    list                           shift and go to state 15
    list_id_string                 shift and go to state 17
    equal                          shift and go to state 19
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 26

state 6

    (4) function -> conditional .
    (5) function -> conditional . function
    (2) function -> . code
    (3) function -> . code function
    (4) function -> . conditional
    (5) function -> . conditional function
    (10) code -> . statements
    (11) code -> . statements code
    (12) code -> . blocks
    (13) code -> . blocks code
    (6) conditional -> . WHILE LPAREN operation RPAREN block
    (7) conditional -> . IF LPAREN operation RPAREN block
    (8) conditional -> . IF LPAREN operation RPAREN block ELSE block
    (9) conditional -> . IF RPAREN operation LPAREN block ELSE block
    (18) statements -> . statement SEMICOLON statements
    (19) statements -> . statement SEMICOLON
    (14) blocks -> . block blocks
    (15) blocks -> . block
    (20) statement -> . operation
    (21) statement -> . list
    (22) statement -> . ID ASSIGNVALUE operation
    (23) statement -> . ID ASSIGNVALUE list
    (24) statement -> . list_id_string ASSIGNVALUE operation
    (25) statement -> . PRINT LPAREN operation RPAREN
    (26) statement -> . PRINT LPAREN list RPAREN
    (16) block -> . LCURLYBRACKET function RCURLYBRACKET
    (17) block -> . LCURLYBRACKET statements RCURLYBRACKET
    (45) operation -> . equal
    (51) operation -> . expression IN list
    (52) operation -> . operation OR equal
    (53) operation -> . operation AND equal
    (40) list -> . LBRACKET items RBRACKET
    (27) list_id_string -> . list LBRACKET expression RBRACKET
    (28) list_id_string -> . list LBRACKET list_id_string RBRACKET
    (29) list_id_string -> . list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (30) list_id_string -> . LBRACKET list RBRACKET LBRACKET expression RBRACKET
    (31) list_id_string -> . LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (32) list_id_string -> . LBRACKET list RBRACKET LBRACKET ID RBRACKET
    (33) list_id_string -> . LBRACKET expression RBRACKET LBRACKET ID RBRACKET
    (34) list_id_string -> . ID LBRACKET list_id_string RBRACKET
    (35) list_id_string -> . ID LBRACKET expression RBRACKET
    (36) list_id_string -> . ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (37) list_id_string -> . STRING LBRACKET list_id_string RBRACKET
    (38) list_id_string -> . STRING LBRACKET expression RBRACKET
    (39) list_id_string -> . STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (46) equal -> . condition
    (50) equal -> . NOT equal
    (65) equal -> . equal IS condition
    (66) equal -> . equal ISNOT condition
    (49) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (47) condition -> . expression
    (61) condition -> . condition GREATERTHEN expression
    (62) condition -> . condition GREATERTHENEQUAL expression
    (63) condition -> . condition LESSTHENEQUAL expression
    (64) condition -> . condition LESSTHEN expression
    (48) term -> . factor
    (56) term -> . term TIMES factor
    (57) term -> . term DIVIDE factor
    (58) term -> . term FLOORDIV factor
    (59) term -> . term MOD factor
    (60) term -> . term EXPONENTIAL factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . FLOAT
    (70) factor -> . STRING
    (71) factor -> . LPAREN operation RPAREN
    (72) factor -> . list_id_string

    RCURLYBRACKET   reduce using rule 4 (function -> conditional .)
    WHILE           shift and go to state 9
    IF              shift and go to state 13
    ID              shift and go to state 16
    PRINT           shift and go to state 18
    LCURLYBRACKET   shift and go to state 3
    LBRACKET        shift and go to state 21
    STRING          shift and go to state 22
    NOT             shift and go to state 24
    NUMBER          shift and go to state 27
    FLOAT           shift and go to state 28
    LPAREN          shift and go to state 10

    conditional                    shift and go to state 6
    function                       shift and go to state 33
    code                           shift and go to state 5
    statements                     shift and go to state 7
    blocks                         shift and go to state 8
    operation                      shift and go to state 11
    block                          shift and go to state 12
    statement                      shift and go to state 14
    list                           shift and go to state 15
    list_id_string                 shift and go to state 17
    equal                          shift and go to state 19
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 26

state 7

    (10) code -> statements .
    (11) code -> statements . code
    (10) code -> . statements
    (11) code -> . statements code
    (12) code -> . blocks
    (13) code -> . blocks code
    (18) statements -> . statement SEMICOLON statements
    (19) statements -> . statement SEMICOLON
    (14) blocks -> . block blocks
    (15) blocks -> . block
    (20) statement -> . operation
    (21) statement -> . list
    (22) statement -> . ID ASSIGNVALUE operation
    (23) statement -> . ID ASSIGNVALUE list
    (24) statement -> . list_id_string ASSIGNVALUE operation
    (25) statement -> . PRINT LPAREN operation RPAREN
    (26) statement -> . PRINT LPAREN list RPAREN
    (16) block -> . LCURLYBRACKET function RCURLYBRACKET
    (17) block -> . LCURLYBRACKET statements RCURLYBRACKET
    (45) operation -> . equal
    (51) operation -> . expression IN list
    (52) operation -> . operation OR equal
    (53) operation -> . operation AND equal
    (40) list -> . LBRACKET items RBRACKET
    (27) list_id_string -> . list LBRACKET expression RBRACKET
    (28) list_id_string -> . list LBRACKET list_id_string RBRACKET
    (29) list_id_string -> . list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (30) list_id_string -> . LBRACKET list RBRACKET LBRACKET expression RBRACKET
    (31) list_id_string -> . LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (32) list_id_string -> . LBRACKET list RBRACKET LBRACKET ID RBRACKET
    (33) list_id_string -> . LBRACKET expression RBRACKET LBRACKET ID RBRACKET
    (34) list_id_string -> . ID LBRACKET list_id_string RBRACKET
    (35) list_id_string -> . ID LBRACKET expression RBRACKET
    (36) list_id_string -> . ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (37) list_id_string -> . STRING LBRACKET list_id_string RBRACKET
    (38) list_id_string -> . STRING LBRACKET expression RBRACKET
    (39) list_id_string -> . STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (46) equal -> . condition
    (50) equal -> . NOT equal
    (65) equal -> . equal IS condition
    (66) equal -> . equal ISNOT condition
    (49) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (47) condition -> . expression
    (61) condition -> . condition GREATERTHEN expression
    (62) condition -> . condition GREATERTHENEQUAL expression
    (63) condition -> . condition LESSTHENEQUAL expression
    (64) condition -> . condition LESSTHEN expression
    (48) term -> . factor
    (56) term -> . term TIMES factor
    (57) term -> . term DIVIDE factor
    (58) term -> . term FLOORDIV factor
    (59) term -> . term MOD factor
    (60) term -> . term EXPONENTIAL factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . FLOAT
    (70) factor -> . STRING
    (71) factor -> . LPAREN operation RPAREN
    (72) factor -> . list_id_string

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LCURLYBRACKET resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    WHILE           reduce using rule 10 (code -> statements .)
    IF              reduce using rule 10 (code -> statements .)
    RCURLYBRACKET   reduce using rule 10 (code -> statements .)
    ID              shift and go to state 16
    PRINT           shift and go to state 18
    LCURLYBRACKET   shift and go to state 3
    LBRACKET        shift and go to state 21
    STRING          shift and go to state 22
    NOT             shift and go to state 24
    NUMBER          shift and go to state 27
    FLOAT           shift and go to state 28
    LPAREN          shift and go to state 10

  ! ID              [ reduce using rule 10 (code -> statements .) ]
  ! PRINT           [ reduce using rule 10 (code -> statements .) ]
  ! LCURLYBRACKET   [ reduce using rule 10 (code -> statements .) ]
  ! LBRACKET        [ reduce using rule 10 (code -> statements .) ]
  ! STRING          [ reduce using rule 10 (code -> statements .) ]
  ! NOT             [ reduce using rule 10 (code -> statements .) ]
  ! NUMBER          [ reduce using rule 10 (code -> statements .) ]
  ! FLOAT           [ reduce using rule 10 (code -> statements .) ]
  ! LPAREN          [ reduce using rule 10 (code -> statements .) ]

    statements                     shift and go to state 7
    code                           shift and go to state 34
    blocks                         shift and go to state 8
    statement                      shift and go to state 14
    block                          shift and go to state 12
    operation                      shift and go to state 11
    list                           shift and go to state 15
    list_id_string                 shift and go to state 17
    equal                          shift and go to state 19
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 26

state 8

    (12) code -> blocks .
    (13) code -> blocks . code
    (10) code -> . statements
    (11) code -> . statements code
    (12) code -> . blocks
    (13) code -> . blocks code
    (18) statements -> . statement SEMICOLON statements
    (19) statements -> . statement SEMICOLON
    (14) blocks -> . block blocks
    (15) blocks -> . block
    (20) statement -> . operation
    (21) statement -> . list
    (22) statement -> . ID ASSIGNVALUE operation
    (23) statement -> . ID ASSIGNVALUE list
    (24) statement -> . list_id_string ASSIGNVALUE operation
    (25) statement -> . PRINT LPAREN operation RPAREN
    (26) statement -> . PRINT LPAREN list RPAREN
    (16) block -> . LCURLYBRACKET function RCURLYBRACKET
    (17) block -> . LCURLYBRACKET statements RCURLYBRACKET
    (45) operation -> . equal
    (51) operation -> . expression IN list
    (52) operation -> . operation OR equal
    (53) operation -> . operation AND equal
    (40) list -> . LBRACKET items RBRACKET
    (27) list_id_string -> . list LBRACKET expression RBRACKET
    (28) list_id_string -> . list LBRACKET list_id_string RBRACKET
    (29) list_id_string -> . list LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (30) list_id_string -> . LBRACKET list RBRACKET LBRACKET expression RBRACKET
    (31) list_id_string -> . LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (32) list_id_string -> . LBRACKET list RBRACKET LBRACKET ID RBRACKET
    (33) list_id_string -> . LBRACKET expression RBRACKET LBRACKET ID RBRACKET
    (34) list_id_string -> . ID LBRACKET list_id_string RBRACKET
    (35) list_id_string -> . ID LBRACKET expression RBRACKET
    (36) list_id_string -> . ID LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (37) list_id_string -> . STRING LBRACKET list_id_string RBRACKET
    (38) list_id_string -> . STRING LBRACKET expression RBRACKET
    (39) list_id_string -> . STRING LBRACKET expression RBRACKET LBRACKET expression RBRACKET
    (46) equal -> . condition
    (50) equal -> . NOT equal
    (65) equal -> . equal IS condition
    (66) equal -> . equal ISNOT condition
    (49) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (47) condition -> . expression
    (61) condition -> . condition GREATERTHEN expression
    (62) condition -> . condition GREATERTHENEQUAL expression
    (63) condition -> . condition LESSTHENEQUAL expression
    (64) condition -> . condition LESSTHEN expression
    (48) term -> . factor
    (56) term -> . term TIMES factor
    (57) term -> . term DIVIDE factor
    (58) term -> . term FLOORDIV factor
    (59) term -> . term MOD factor
    (60) term -> . term EXPONENTIAL factor
    (67) factor -> . ID
    (68) factor -> . NUMBER
    (69) factor -> . FLOAT
    (70) factor -> . STRING
    (71) factor -> . LPAREN operation RPAREN
    (72) factor -> . list_id_string

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LCURLYBRACKET resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    WHILE           reduce using rule 12 (code -> blocks .)
    IF              reduce using rule 12 (code -> blocks .)
    RCURLYBRACKET   reduce using rule 12 (code -> blocks .)
    ID              shift and go to state 16
    PRINT           shift and go to state 18
    LCURLYBRACKET   shift and go to state 3
    LBRACKET        shift and go to state 21
    STRING          shift and go to state 22
    NOT             shift and go to state 24
    NUMBER          shift and go to state 27
    FLOAT           shift and go to state 28
    LPAREN          shift and go to state 10

  ! ID              [ reduce using rule 12 (code -> blocks .) ]
  ! PRINT           [ reduce using rule 12 (code -> blocks .) ]
  ! LCURLYBRACKET   [ reduce using rule 12 (code -> blocks .) ]
  ! LBRACKET        [ reduce using rule 12 (code -> blocks .) ]
  ! STRING          [ reduce using rule 12 (code -> blocks .) ]
  ! NOT             [ reduce using rule 12 (code -> blocks .) ]
  ! NUMBER          [ reduce using rule 12 (code -> blocks .) ]
  ! FLOAT           [ reduce using rule 12 (code -> blocks .) ]
  ! LPAREN          [ reduce using rule 12 (code -> blocks .) ]

    blocks                         shift and go to state 8
    code                           shift and go to state 35
    statements                     shift and go to state 7
    statement                      shift and go to state 14
    block                          shift and go to state 12
    operation                      shift and go to state 11
    list                           shift and go to state 15
    list_id_string                 shift and go to state 17
    equal                          shift and go to state 19
    expression                     shift and go to state 20
    condition                      shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 26

state 9

    (6) conditional -> WHILE . LPAREN operation RPAREN block

    LPAREN          shift and go to state 36


state 10
